Q2/infra/k8s/search-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: search-mysql-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: search-mysql
    template:
        metadata:
            labels:
                app: search-mysql
        spec:
            containers:
                - name: search-mysql
                  image: mysql
                  ports:
                      - containerPort: 3306
                  volumeMounts:
                      - mountPath: "/var/lib/mysql"
                        subPath: "mysql"
                        name: mysql-data
            volumes:
                - name: mysql-data
                  persistentVolumeClaim:
                      claimName: mysql-data-disk
---
apiVersion: v1
kind: Service
metadata:
    name: search-mysql-srv
spec:
    # which pod
    selector:
        app: search-mysql
    # by default iw will create clusterIp
    # type: clusterIp
    ports:
        - name: db
          protocol: TCP
          port: 3306
          targetPort: 3306
