Q2/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    # important!
    # is going to tell ingress-controller abput routing rules
    annotations:
        kubernetes.io/ingress.class: nginx
        # to use regex for wildcard
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    # to teach ingress-controller how to handle incoming traffic & apply it to pods
    rules:
        - host: localhost
          http:
              # to tell incoming traffic what to do if /posts requested
              paths:
                  - path: /search
                    pathType: Prefix
                    backend:
                        service:
                            name: search-srv
                            port:
                                number: 4000
                  - path: /detail
                    pathType: Prefix
                    backend:
                        service:
                            name: search-srv
                            port:
                                number: 4000
